# smart-home-bot

./: .dockerignore  Dockerfile  README.md  activity.py  config.py  main.py  pyproject.toml  ruff.toml  workflow.py
.gitea/workflows/: docker.yml
.github/workflows/: docker-publish.yml
activity/: __init__.py  homeassistant.py  reply.py
config/: __init__.py  client.py  config.py  homeassistant.py  langsmith.py  line.py  logger.py  mqtt.py  prompt.py  prompt.yaml  temporal.py
